<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg_gradient">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="275dp"
        android:layout_height="202dp"
        android:layout_marginTop="104dp"
        android:contentDescription="@string/IMG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/foro"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/TxtUser"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/User"
        android:inputType="text"
        android:text=""
        android:textColor="@color/white"
        android:textColorHint="#857D7D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/TxtPass"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="#857D7D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/BtnLogin"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="156dp"
        android:text="@string/Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/TxtRecovery"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginTop="214dp"
        android:text="@string/Recovery"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/TxtNewAccount"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="252dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/newAcount"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="TextSizeCheck,TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>